add course handler
